re PR c++/11154 (spurious ambiguity report for template class specialization)

PR c++/11154
	* pt.c (more_specialized_class): Add full_args parameter.
	(most_specialized_class): Adjust calls to more_specialized_class.
	* cp-tree.h (more_specialized_class): Adjust declaration.

	* g++.dg/template/partial2.C: New test.

From-SVN: r69326