gcc/cp/cp-tree.h
@@ -4086,7 +4086,7 @@ extern tree instantiate_decl			PARAMS ((tree, int));
 extern tree get_bindings			PARAMS ((tree, tree, tree));
 extern int push_tinst_level			PARAMS ((tree));
 extern void pop_tinst_level			PARAMS ((void));
-extern int more_specialized_class		PARAMS ((tree, tree));
+extern int more_specialized_class		PARAMS ((tree, tree, tree));
 extern int is_member_template                   PARAMS ((tree));
 extern int comp_template_parms                  PARAMS ((tree, tree));
 extern int template_class_depth                 PARAMS ((tree));
